# signal-up

./: .coverage  .gitattributes  .gitignore  CHANGELOG.md  DESIGN.md  PRD.md  README.md  pyproject.toml  시작_가이드.txt
.claude/: CLAUDE.md  settings.json  settings.local.json
.claude/hooks/: gateguard.py
docs/: CLAUDE_CODE_PROMPTS.md  runbook.md  user_manual.md  user_manual.txt
docs/adr/: 0001-bb-cci-indicators.md  0002-no-autotrading.md  0003-telegram-only-channel.md  0004-single-1h-timeframe.md  0005-local-web-dashboard.md  0006-self-hosted-distribution.md  0007-user-owned-bot-token.md  0008-settings-storage.md  0009-windows-atomic-write.md  0010-strategy-catalog.md  0011-windows-service.md  0012-signals-jsonl-canonical.md  0013-daemon-stdout-redirect.md  0014-operation-guide-path-sync.md  0015-korean-stock-market-support.md  0016-kis-api-korean-stock-datasource.md  0017-v2-strategy-no-go-redesign.md  0018-kr-fractal-strategy.md  README.md  template.md
scripts/: daily_check.ps1  weekly_summary.ps1
src/signal_program/: __init__.py  cli.py  config.py  constants.py  enums.py  exceptions.py  kr_runner.py  logging_config.py  models.py  runner.py
templates/: backtest_report.html.j2  walkforward_report.html.j2
tests/: conftest.py
tests/integration/: conftest.py  test_auth_middleware.py  test_backtest_cli.py  test_backtest_page.py  test_daemon_api.py  test_operational_contracts.py  test_runner_dry_run.py  test_security_regression.py  test_settings_api.py  test_upbit_client.py  test_web_api.py  test_web_pages.py
tests/unit/: test_backtest_engine.py  test_bollinger.py  test_candles_io.py  test_cci.py  test_charting_cleanup.py  test_charting_snapshot.py  test_config.py  test_cooldown.py  test_exceptions.py  test_feedback.py  test_indicators_obv.py  test_indicators_stochastic.py  test_kis_adapter.py  test_kr_runner.py  test_logging_config.py  (+8 more)
(+72 files in other folders)
